--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,16 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Calistoga&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"); */
-@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap');
 
 @import "tailwindcss";
 
-@layer base {
-  /* .nav-items {
-    @apply px-4 py-1.5 rounded-full text-sm font-semibold text-white/70 hover:text-white hover:bg-white/10 transition duration-300;
-  }
-  .nav-items-active {
-    @apply bg-white text-gray-900 hover:text-gray-900 hover:bg-white/70;
-  }
-  .hero-ring {
-    @apply absolute inset-0 -z-30 border-2 border-emerald-300/5 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rounded-full shadow-[0_0_80px_inset] shadow-emerald-300/5;
-  }
-  html {
-    @apply scroll-smooth;
-  } */
-  body:{
-      font-family: "Geist Mono", monospace;
-  }
+
+@theme {
+  --font-body : "Geist Mono", monospace;
+    --font-text: "Space Grotesk", sans-serif;
 }
+
+
+
 
 
