--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap");
 
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 /* dark and light theme  */
 @custom-variant dark (&:where(.dark, .dark *));
